chore : 게시물 수정 및 삭제 기능 오류 해결